--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -27,6 +27,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css">
 <script src="/javascripts/js/ejs.js"></script>
 <script src="/javascripts/js/ejs.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
