--- a/public/stylesheets/css/custom.css
+++ b/public/stylesheets/css/custom.css
@@ -22,3 +22,170 @@ table.table-custom {
 #dataTables-example th {
     text-align: left;
 }
+
+.hidden-product {
+    text-align: center;
+    background: #eee;
+    color: #666
+}
+
+.show-product {
+    text-align: center;
+    background: #eee;
+    color: #29bd04f5;
+    font-weight: 600;
+}
+
+.sku-product {
+    color: #666;
+}
+
+.sku-product p {
+    font-size: 12px;
+}
+
+.out-stock {
+    padding: 0 4px;
+    color: #ee4d2d;
+    background: rgba(239,71,71,.16);
+    border-radius: 2px;
+}
+
+.show-img-product {
+    width: 56px;
+    min-width: 56px;
+    height: 65px;
+    position: relative;
+    border-radius: 2px;
+    overflow: hidden;
+    background-color: rgba(0,0,0,.03);
+    display: flex;
+    margin-right: 5px;
+    margin-top: 5%;
+}
+
+.show-img-product::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.03);
+}
+
+.show-img-product img {
+    width: 100%;
+}
+
+.is-flex {
+    display: flex;
+}
+
+.show-opt {
+    padding: 10px;
+    border: 1px solid #666;
+}
+.act-ckb, #count-product-checked, .delete-product {
+    margin: auto 10px !important;
+}
+
+.delete-product {
+    margin-left: 10px;
+}
+
+#delete-product {
+    color: #333;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    position: relative;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    height: 32px;
+    min-width: 72px;
+    padding: 0 16px;
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: none;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border-radius: 4px;
+    outline: none;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#delete-product:hover {
+    background: #666;
+    color: #fff;
+}
+
+.info-product .info-status {
+    width: 40%;
+}
+
+.info-product p{
+    margin: 0 0 5px;
+    font-size: 12px;
+}
+
+.product-banned {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: rgba(0,0,0,.65);
+}
+
+.product-banned::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.03);
+}
+
+.banned-icon svg {
+    width: 16px;
+    height: 16px;
+    fill: #fff;
+}
+
+.btn-update {
+    height:10px;
+    width:10px;
+    background:lime;
+    position:absolute;
+    right: 10%;
+    margin-top: 20px;
+}
