--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,12 +1,14 @@
 <% include ../partials/header_admin %>
-
+<div class="opt-all">
+    
+</div>
 <div style="margin-left: 5%;">
     <div class="col-lg-12">
         <h1 class="page-header">Product
             <small>List</small>
             <div style="float: right;">
                 <a href="{!! url('admin/product/add_excel') !!}" class="btn btn-success" data-toggle="modal" data-target="#inputPro" style="font-size: 18px;"><i class="fas fa-upload" style="margin-right: 5px;"></i> Nhập danh sách</a>
-                <a href="/admin/product/add" class="btn btn-success" style="font-size: 18px;"><i class="fas fa-plus-square" style="margin-right: 5px;"></i> Thêm mới sản phẩm</a>
+                <a href="/seller/product/add" class="btn btn-success" style="font-size: 18px;"><i class="fas fa-plus-square" style="margin-right: 5px;"></i> Thêm mới sản phẩm</a>
             </div>
         </h1>
     </div>
@@ -61,11 +63,13 @@
         <thead>
             <tr align="center">
                 <th>STT</th>
+                <th><input type="checkbox" id="ckbAll" onclick="checkAll()"></th>
                 <th>Tên sản phẩm</th>
                 <th>SKU</th>
                 <th>Phân loại hàng</th>
                 <th>Giá</th>
                 <th>Kho hàng</th>
+                <th>Tình trạng</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -74,40 +78,90 @@
            <%data.forEach(item => { i++;%>
             <tr class="odd gradeX" align="center">
                 <td><%-i%></td>
-                <td><%-item.name%></td>
+                <td><input type="checkbox" class="checkOne" name="ckbProduct" value="<%-item.id%>" onclick="checkOne()"></td>
                 <td>
+                   <div style="display: flex;">
+                        <div class="show-img-product">
+                            <img src="<%-item.classify[0].url.cover%>" alt="">
+                            <div class="<%-item.status == 0? 'product-banned':''%>">
+                                <i data-v-39f338ef="" class="shop-icon banned-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4 5V4a4 4 0 1 1 8 0v1h1a.99.99 0 0 1 .56.172A.998.998 0 0 1 14 6v8a.99.99 0 0 1-.172.56A.998.998 0 0 1 13 15H3a.99.99 0 0 1-.56-.172A.998.998 0 0 1 2 14V6a.99.99 0 0 1 .172-.56A.998.998 0 0 1 3 5h1zm3.154 5.239l.276 2.225a.611.611 0 0 0 .606.536.6.6 0 0 0 .597-.537l.238-2.241a1.5 1.5 0 1 0-1.717.017zM8 2a2 2 0 0 0-2 2v1h4V4a2 2 0 0 0-2-2z"></path></svg></i>
+                            </div>
+                        </div>
+                        <div class="info-product">
+                            <div class="info-status">
+                                <%-item.status == 0?'<p class="hidden-product">Đã ẩn</p>': '<p class="show-product">Đang bán</p>'%>
+                            </div>
+                            <div>
+                                <p><%-item.name%></p>
+                            </div>
+                            <div class="sku-product">
+                                <p>SKU sản phẩm:  <%-item.sku==''?'--':item.sku%></p>
+                            </div>
+                        </div>
+                   </div>
+                </td>
+                <td>
+                  <%if (item.classify) {%>
                    <%item.classify.forEach(it => {%>
                         <div>
-                            <input type="text" value="<%-it.sku%>" class="form-control form-edit">
+                            <p><%-it.sku == ''?'--':it.sku%></p>
                         </div>
                     <%})%>
+                  <%}%>
                 </td>
                 <td> 
+                    <%if (item.classify) {%>
                     <%item.classify.forEach(it => {%>
                         <div>
-                            <p><%-it.attribute.Color%>, <%-it.attribute.Size%></p>
+                            
+                            <% if (it.attribute.key) {%>
+                                <p>--</p>
+                            <%} else if (it.attribute.Color && !it.attribute.Size){%>
+                                <p><%-it.attribute.Color%></p>
+                            <%} else if (!it.attribute.Color && it.attribute.Size) {%>
+                                <p><%-it.attribute.Size%></p>
+                            <%} else {%>
+                                <p><%-it.attribute.Color%>, <%-it.attribute.Size%></p>
+                            <%}%>
                         </div>
                     <%})%>
+                    <%}%>
                 </td>
                 <td>
+                    <%if (item.classify) {%>
                     <%item.classify.forEach(it => {%>
                         <div>
-                            <input type="number" value=<%-it.price%> class="form-control form-edit">
+                            <p><%-it.price%> đ</p>
                         </div>
                     <%})%>
+                    <%}%>
                 </td>
                 <td>
+                    <%if (item.classify) {%>
                     <%item.classify.forEach(it => {%>
-                        <div>
-                            <input type="number" value=<%-it.stockamount%> class="form-control form-edit">
+                        <div style="margin-bottom: 16px;">
+                            <%-it.stockamount==0?'<p class="out-stock">Hết hàng</p>':it.stockamount%>
                         </div>
                     <%})%>
+                    <%}%>
                 </td>
-                <td class="center"><a href="admin/product/edit/<%-item.id%>" class="btn btn-warning">
-                    <i class="fas fa-edit"></i> Edit</a>
+                <td>
+                    <div>
+                        <%-item.status == 0?'<p class="hidden-product">Đã ẩn</p>': '<p class="show-product">Đang bán</p>'%>
+                    </div>
                 </td>
-                <td class="center"><a href="admin/product/edit/variant/<%-item.id%>" class="btn btn-warning">
-                    <i class="fas fa-edit"></i> Edit Variant</a>
+                <td class="center">
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                          Tùy chọn
+                          <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                          <li><a href="" onclick="btnShow(this)" data-id="<%-item.id%>" data-status="<%-item.status%>"><%-item.status == 0? 'Hiển thị' : 'Ẩn'%></a></li>
+                          <li><a href="seller/product/edit/<%-item.id%>">Sửa</a></li>
+                          <li><a href="seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
+                        </ul>
+                      </div>
                 </td>
             </tr>
            <%})%>
@@ -115,5 +169,5 @@
         </tbody>
     </table>
 </div>
-
+<script src="/javascripts/js/admin/changeInfoVariant.js"></script>
 <% include ../partials/footer_admin %>
