--- a/views/admin/inventory/inventoryDetail.ejs
+++ b/views/admin/inventory/inventoryDetail.ejs
@@ -1,5 +1,8 @@
 <% include ../../partials/header_admin %>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<div class="category-link">
+    <a href="/seller">Trang chủ</a> >
+    <span>Chi tiết sản phẩm</span>
+</div>
 <div style="margin-left: 5%;">
     <div class="col-lg-12">
         <h1 class="page-header">Product
@@ -16,7 +19,6 @@
                 <th>Phân loại hàng</th>
                 <th>Giá</th>
                 <th>Kho hàng</th>
-                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -32,30 +34,35 @@
                     <div class="form-group edit-variant">
                         <input type="text" class="form-control" id="sku" 
                         onkeypress="changeVariant()"
-                        value="<%-item.sku == '' ? '--': item.sku%>"/>  
+                        value="<%-item.sku == '' ? '--': item.sku%>" name="sku"/>  
                     </div>
                 </td>
-                <td><%-item.attribute.Color%>, <%-item.attribute.Size%></td>
+                <td>
+                    <%-item.attribute.Color%>, <%-item.attribute.Size%>
+                    
+                </td>
                 <td>
                     <div class="form-group edit-variant">
                         <input class="form-control gia_ban" id="price" placeholder=" Enter Product Price" 
-                       id="price"
+                       id="price" name="price"
                         value="<%-item.price%>" type="number" onkeypress="changeVariant()"/>  
                     </div>
                 </td>
                 <td>
                     <div class="form-group edit-variant">
-                        <input class="form-control" id="stock"
-                        value="<%-item.stockamount%>" type="number" onkeypress="changeVariant()"/>  
+                        <input class="form-control" id="stock" name="stock"
+                        value="<%-item.stockamount%>" type="number" onkeypress="changeVariant()" required/>  
                     </div>
-                </td>
-                <td style="display: none;" class="center act-update"><a href="" class="btn btn-warning" onclick="updateVariant()">
-                    <i class="fas fa-edit"></i> Update</a>
                 </td>
             </tr>
            <%})}%>
         </tbody>
     </table>
+    <div class="btn-update" style="display: none;">
+        <a href="" class="btn btn-warning" onclick="updateVariant()">
+            <i class="fas fa-edit"></i> Update
+        </a>
+    </div>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="/javascripts/js/admin/changeInfoVariant.js"></script>
