--- a/views/adminSys/login/login.ejs
+++ b/views/adminSys/login/login.ejs
@@ -25,7 +25,7 @@
 </style>
 <body>
     <div id="login">
-        <h3 class="text-center text-white pt-5">Login form</h3>
+        <h3 class="text-center text-white pt-5">Login form admin</h3>
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
@@ -72,7 +72,7 @@
         let password = $("#password").val();
 
         $.ajax({
-            url: `${window.location.origin}/shop`,
+            url: `${window.location.origin}/admin/login`,
             method: "POST",
             data: {username: username, password: password},
             success: function(data) { 
@@ -83,7 +83,7 @@
                 button: "Aww yiss!",
                 });
 
-                window.location.href = "http://localhost:3000/seller";
+                window.location.href = "http://localhost:3000/admin";
 
             },
             error: function(err) {
