--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -9,27 +9,18 @@
 
                 <div class="card-body">
                     
-                    <% if (status && message == 'undefined') {%>
-                        <div class="alert alert-success">
-                            
-                                <%-status%>
-                               
+                    <% if (message != '') {%>
+                        <div class="alert alert-danger">
+                            <%-message%>
                         </div>
                     <% } %>
 
                     <form class="form-horizontal" method="POST" action="">
 
-                        <div class="form-group{{ $errors->has('email') ? ' has-error' : '' }}">
-                            <label for="email" class="col-md-4 control-label">E-Mail Address</label>
-
+                        <div class="form-group">
+                            <label for="email" class="col-md-4 control-label">Tên tài khoản</label>
                             <div class="col-md-12">
-                                <input id="email" type="email" class="form-control" name="email" value="" required>
-
-                                <% if (message != 'undefined') {%>
-                                    <div class="status">
-                                        <span><%=message%></span>
-                                    </div>
-                                <% } %>
+                                <input id="username" type="text" class="form-control" name="username" placeholder="Nhập tên tài khoản" required>
                             </div>
                         </div>
 
