--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -135,7 +135,7 @@
                                         <li><a class="dropdown-item" value="4" href="{!! URL::route('link-category', 4) !!}">Áo Len Nam</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown-submenu">
+                                <!-- <li class="dropdown-submenu">
                                     <a class="dropdown-item dropdown-toggle" href="#">Quần Nam</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" value="5" href="{!! URL::route('link-category', 5) !!}">Quần Jean Nam</a></li>
@@ -155,7 +155,7 @@
                                         <li><a class="dropdown-item" href="#">Quần Lót Nam</a></li>
                                         <li><a class="dropdown-item" href="#">Vớ Nam</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
