--- a/public/stylesheets/css/first_page.css
+++ b/public/stylesheets/css/first_page.css
@@ -549,7 +549,7 @@
  	width:15px;
  	border-radius:0;
  	transform:translateX(-50%); 
- 	rotate(45deg);
+ 	rotate: (45deg);
  	top:-22px;
  	z-index:-1;
  }
@@ -565,4 +565,72 @@
 }
 .active2 {
 	background: khaki;
+}
+
+/*custom*/
+.menu-block {
+    border: 1px solid rgba(8,21,38,.15);
+}
+.main-title {
+    font-size: 16px;
+    color: #070404;
+    padding: 13px 15px;
+    border-bottom: 1px solid rgba(8,21,38,.15);
+    font-weight: 600;
+}
+.menu-block.menu-has-child .submenu {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.menu-block.menu-has-child ul li {
+    display: block;
+}
+.product-category-wrapper .menu-block li {
+    display: flex;
+    width: 100%;
+	align-items: flex-end;
+}
+.product-category-wrapper .menu-block.menu-has-child ul li .menu-header {
+    display: inline-block;
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 0;
+}
+.menu-block.menu-has-child ul li .menu-header .title {
+    display: inline-block;
+    padding-top: 0;
+}
+.menu-block.menu-has-child ul li .menu-content-show.active {
+    visibility: visible;
+    opacity: 1;
+    transition: all .3s ease;
+    filter: alpha(opacity=100);
+    height: auto;
+    transform: translateY(-5px);
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.menu-block.menu-has-child ul ul li {
+    padding-left: 15px;
+    display: inline-block;
+    width: 100%;
+    padding-top: 10px;
+}
+.menu-block.menu-has-child .submenu .link {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+	display: inline-block;
+}
+.menu-block li {
+    display: flex;
+    width: 100%;
+	align-items: flex-end;
+}
+.menu-block.menu-has-child ul li .menu-header {
+    display: inline-block;
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 0;
 }
