--- a/public/stylesheets/css/view.css
+++ b/public/stylesheets/css/view.css
@@ -645,3 +645,139 @@ footer .left-footer, footer .right-footer
 {
   height: 100%;
 }
+
+/* custom variant button*/
+._2oeDUI {
+  -webkit-flex-basis: 32.1875rem;
+  -ms-flex-preferred-size: 32.1875rem;
+  flex-basis: 32.1875rem;
+  max-width: 32.1875rem;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.items-center {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.flex, .h-center {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.product-variation {
+  cursor: pointer;
+  min-width: 5rem;
+  min-height: 2.125rem;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: .25rem .75rem;
+  margin: 0 8px 8px 0;
+  color: rgba(0,0,0,.8);
+  text-align: left;
+  border-radius: 2px;
+  border: 1px solid rgba(0,0,0,.09);
+  position: relative;
+  background: #fff;
+  outline: 0;
+  word-break: break-word;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -moz-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.product-variation-selected {
+  color: #00bcd4;
+  border-color: #00bcd4;
+}
+button:focus {
+  outline: none;
+}
+
+.cpAMpZ {
+  padding-left: 20px;
+}
+._1BdIQL {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+._1D3GfE {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -moz-box-orient: horizontal;
+  -moz-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+._3Kiuzg {
+  margin-right: 15px;
+  min-width: 11.25rem;
+  padding: 0 .75rem;
+  font-size: 14px;
+}
+._2FCuXA {
+  margin-right: 10px;
+  color: #ee4d2d;
+  stroke: #ee4d2d;
+  font-size: 1.25rem;
+}
+
+.shopee-svg-icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  position: relative;
+}
+._3Kiuzg {
+  margin-right: 15px;
+  min-width: 11.25rem;
+  padding: 0 .75rem;
+  font-size: 14px;
+}
+.btn-solid-primary {
+  color: #fff;
+  background: #ee4d2d;
+}
+.btn--l, .btn--xl {
+  min-width: 80px;
+  max-width: 250px;
+}
+.btn-tinted {
+  background: rgba(255,87,34,.1);
+  border: 1px solid #ee4d2d;
+  box-shadow: 0 1px 1px 0 rgb(0 0 0 / 3%);
+}
+.btn--l {
+  font-size: 16px;
+  height: 48px;
+  padding: 0 20px;
+}
+.error-miss-info {
+  background: #fff5f5;
+  padding: 10px;
+}
+.notifi-miss {
+  margin: 15px 0 0 110px;
+  color: #ff424f;
+}
