--- a/views/shop/product/productDetail.ejs
+++ b/views/shop/product/productDetail.ejs
@@ -7,152 +7,145 @@
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="/javascripts/jquery.exzoom.js"></script>
 <script src="/javascripts/js/zoom.js"></script>
+<script src="/javascripts/js/product.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 
 <div class="container" style="margin: 60px auto 0px; max-width: 1300px;">
     <div class="row">
         <div class="col-sm-4" style="display: flex;">
-            <input type="hidden" id="product_id" value="<%-data._id%>">
+            <input type="hidden" id="product_id" value="<%-data[0].product_id%>">
             <div class="list_gallery">
-                <%subImg.forEach((img) => {%>
-                <div class="gallery">
-                    <img class="image_gallery" src="/uploads/<%-img%>" alt="Cinque Terre" width="100%" height="100%" style="margin-top: 5px;">
-                </div>
-                <%})%>
+
+                <%if (data[0].url.sub1) { %>
+                    <div class="gallery">
+                        <img class="image_gallery" src="<%-data[0].url.sub1%>" alt="Cinque Terre" width="100%" height="100%" style="margin-top: 5px;">
+                    </div>
+                <%} else%>
+                <%if (data[0].url.sub2) { %>
+                    <div class="gallery">
+                        <img class="image_gallery" src="<%-data[0].url.sub2%>" alt="Cinque Terre" width="100%" height="100%" style="margin-top: 5px;">
+                    </div>
+                <%} else%>
+                <%if (data[0].url.sub3) { %>
+                    <div class="gallery">
+                        <img class="image_gallery" src="<%-data[0].url.sub3%>" alt="Cinque Terre" width="100%" height="100%" style="margin-top: 5px;">
+                    </div>
+                <%} %>
+              
             </div>
             <div class="" style="width: 75%; padding-top: 15px;">
                 <div class="exzoom" id="exzoom">
                     <div class="exzoom_img_box">
                         <div class='exzoom_img_ul'>
-                            <div><img id="image_zoom" style="width: 100%;" src="/uploads/<%-img%>"/></div>
+                            <div><img id="image_zoom" style="width: 100%;" src="<%-data[0].cover%>"/></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-5 product_details">
-            <h3 class="product_details_name"><%-data.name%></h3>
+            <h3 class="product_details_name"></h3>
             <div class="product_details_block_info" style="display: flex;">
                 <span style="flex: 0.45;">Mã sản phẩm: SM116</span>
-                <span style="flex: 0.4;">Thương hiệu: <%-brand%></span>
-                <span style="flex: 0.3;">Loại: <%-material%></span>
+                <span style="flex: 0.4;">Thương hiệu: </span>
+                <span style="flex: 0.3;">Loại: </span>
             </div>
             <div style="border-bottom: 1px #80808042 dashed; margin: 5px;"></div>
             <h5 style="margin-top: 15px;">
-                <span class="product_details_price_zero"><%-data.price.toLocaleString()%>₫</span>
-               <!--
-                <span class="product_details_new_price">{{number_format($products->current_price)}}₫</span>
-                <span class="product_details_price">{{number_format($products->price)}}₫</span>
-                
-               
-                
-                
-                <div class="product_details_save_price">
-                    <span>(Bạn đã tiết kiệm được {{number_format($products->price - $products->current_price)}}₫)</span>
-                </div>
-                -->
+                <span class="product_details_price_zero">₫</span>
             </h5>
             <div class="product_details_description">
                 <span></span>
             </div>
             <div style="border-bottom: 1px #80808042 dashed; margin: 5px;"></div>
-            <div class="product_details_color">
-                <div class="product_details_color_text">
-                    <span>Màu sắc:</span>
+            <% var arrColor = [];
+               var arrSize = [];
+            %>
+            <%data.forEach(item => {
+                if (item.color != null)
+                    arrColor.push(item.color);
+                if (item.size != null)
+                    arrSize.push(item.size);
+            })%>
+            <%var newColor = [...new Set(arrColor)]%>
+            <%var newSize = [...new Set(arrSize)]%>
+            <div class="column-variant-option">
+                <% if (newColor.length > 0) { %>
+                <div class="product_details_color">
+                    <div class="product_details_color_text">
+                        <span>Màu sắc:</span>
+                    </div>
+                    <div class="flex items-center _2oeDUI">
+                        <%newColor.forEach(i => {%>
+                            <button class="product-variation"><%-i%></button>
+                        <%})%>
+                    </div>
+                    <input type="text" value="" id="color" hidden>
                 </div>
-                <div class="btn-group btn-group-toggle btn_color" data-toggle="buttons" style="display: inline-block;">
-                    <% var bind = ''%>
-                    <% for (let i = 0; i < color.length; i++) {%>
-                        <%bind = ''%>
-                        <% for (let j = 0; j < list.length; j++) {
-                            if (color[i].name === list[j].color)
-                            {
-                                if (list[j].amount == 0 || list[j].price == 0)
-                                    bind+= list[j].size + ' ';
-                            }
-                        }%>
-                    <label style="margin-bottom: 10px; margin-left: 1px;" class="btn btn-lg btn-outline-default color_fix color_bind <%-bind%><%-color[i].code%> ">
-                        
-                    <input type="radio" name="options" autocomplete="off" class="color_child" value="<%-color[i].name%>">
-                    </label>
-                    <%}%>
+                <%}%>
+            <% if (newSize.length > 0) { %>
+                <div class="product_details_size">
+                    <div class="product_details_size_text">
+                        <span>Kích cỡ:</span>
+                    </div>
+                    <div class="flex items-center _2oeDUI">
+                        <%newSize.forEach(i => {%>
+                            <button class="product-variation"><%-i%></button>
+                        <%})%>
+                    </div>
+                    <input type="text" value="" id="size" hidden>
                 </div>
-            </div>
-            <div class="product_details_size">
-                <div class="product_details_size_text">
-                    <span>Kích cỡ:</span>
+                <%}%>
+                <div class="product_details_amount">
+                    <div class="product_details_amount_text">
+                        <span>Số lượng:</span>
+                    </div>
+                    <div class="input-group" style="width: 30%;">
+                        <span class="input-group-btn">
+                        <button type="button" class="btn btn-number" style="background-color: #80808091; height: 30px;" disabled="disabled" data-type="minus" data-field="quant[1]">
+                        <span class="fa fa-minus"></span>
+                        </button>
+                        </span>
+                        <input type="text" name="quantity" id="quantity" class="form-control input-number" value="1" min="1" max="10" style="max-height: 30px; max-width: 45px;">
+                        <span class="input-group-btn">
+                        <button type="button" class="btn btn-number" style="background-color: #80808091; height: 30px;" data-type="plus" data-field="quant[1]">
+                        <span class="fa fa-plus"></span>
+                        </button>
+                        </span>
+                    </div>
+                    <span style="color: #d53333; font-weight: 700;" class="quantity"></span>
+                    <input type="hidden" id="qtt" value="">
                 </div>
-                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                    <% var bind = '';%>
-                    <% for (let i = 0; i < size.length; i++) {%>
-                        <%bind = ''%>
-                        <% for (let j = 0; j < list.length; j++) {
-                            if (size[i].name === list[j].size)
-                            {
-                                if (list[j].amount == 0 || list[j].price == 0)
-                                    bind+= list[j].color + ' ';
-                            }
-                        }%>
-                    <label class="btn btn-sm btn-outline-danger size_fix size_bind <%-bind%>">
-                    <input type="radio" name="options"  autocomplete="off" class="size_child" value="<%-size[i].name%>"><%-size[i].name%>
-                    </label>
-                    <%}%> 
-                    
-                </div>
-            </div>
-            <div class="product_details_amount">
-                <div class="product_details_amount_text">
-                    <span>Số lượng:</span>
-                </div>
-                <div class="input-group" style="width: 30%;">
-                    <span class="input-group-btn">
-                    <button type="button" class="btn btn-number" style="background-color: #80808091; height: 30px;" disabled="disabled" data-type="minus" data-field="quant[1]">
-                    <span class="fa fa-minus"></span>
-                    </button>
-                    </span>
-                    <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10" style="max-height: 30px; max-width: 45px;">
-                    <span class="input-group-btn">
-                    <button type="button" class="btn btn-number" style="background-color: #80808091; height: 30px;" data-type="plus" data-field="quant[1]">
-                    <span class="fa fa-plus"></span>
-                    </button>
-                    </span>
-                </div>
-                <span style="color: #d53333; font-weight: 700;" class="quantity"></span>
-                <input type="hidden" id="qtt" value="">
             </div>
             <div class="block_pay">
                 <form class="form-vertical" role="form" action="" method="POST">
-                    <input type="hidden" name="_token" value="{!! csrf_token() !!}">
-                    <input type="hidden" name="id_product" value="{{$products->id}}">
-                    <input type="hidden" id="amount" name="amount">
-                    <input type="hidden" id="img" name="img_main" value="/uploads/<%-img%>">
-                    <input type="hidden" id="price" name="price" value="">
-                    <input type="hidden" id="color" name="color" value="">
-                    <input type="hidden" id="size" name="size" value="">
-                    <input type="hidden" id="name" name="name_prod" value="<%-data.name%>">
+                    <input type="hidden" id="pdv" name="pdvID" value="">
+                    <input type="hidden" id="stock" name="stock" value="">
+                    <input type="hidden" id="amount" name="amount" value="">
                     
-                    <!--
-                    <div style="font-size: 13px;">
-                        (Còn lại <span style="color: #d53333; font-weight: 700;">{!! $inventory->amount !!}</span> sản phẩm!)
+                    <div style="margin-top: 15px;">
+                        <div class="cpAMpZ">
+                           <div class="_1BdIQL">
+                              <button type="button" id="add-cart" class="btn btn-tinted btn--l _3Kiuzg _1D3GfE" aria-disabled="false">
+                                 <svg enable-background="new 0 0 15 15" viewBox="0 0 15 15" x="0" y="0" class="shopee-svg-icon _2FCuXA icon-add-to-cart">
+                                    <g>
+                                       <g>
+                                          <polyline fill="none" points=".5 .5 2.7 .5 5.2 11 12.4 11 14.5 3.5 3.7 3.5" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></polyline>
+                                          <circle cx="6" cy="13.5" r="1" stroke="none"></circle>
+                                          <circle cx="11.5" cy="13.5" r="1" stroke="none"></circle>
+                                       </g>
+                                       <line fill="none" stroke-linecap="round" stroke-miterlimit="10" x1="7.5" x2="10.5" y1="7" y2="7"></line>
+                                       <line fill="none" stroke-linecap="round" stroke-miterlimit="10" x1="9" x2="9" y1="8.5" y2="5.5"></line>
+                                    </g>
+                                 </svg>
+                                 <span>thêm vào giỏ hàng</span>
+                              </button>
+                              <button type="button" class="btn btn-solid-primary btn--l _3Kiuzg" aria-disabled="false" id="buy">Mua ngay</button>
+                           </div>
+                        </div>
                     </div>
-                    <button id="them_gio_hang_disabled" class="btn btn-default" disabled="disabled">Not In Available</button>
-                    <a href="" style="visibility: hidden;"><button id="them_gio_hang_click" class="btn btn-dark" disabled="disabled"></button></a>
-                     
-                    <div style="font-size: 13px;">
-                        (Còn lại <span style="color: #d53333; font-weight: 700;">{!! $inventory->amount - $inventory->cart_get_pro !!}</span> sản phẩm!)
-                    </div>
-                    <button id="them_gio_hang" class="btn btn-dark">Mua ngay</button>
-                    <a href="" style="visibility: hidden;"><button id="them_gio_hang_click" class="btn btn-dark"></button></a>
-                    -->
-                    <!-- <div style="font-size: 13px;">
-                        <span style="color: #d53333; font-weight: 700;" class="quantity"></span>
-                    </div> -->
-                    <button id="them_gio_hang" class="btn btn-dark">Mua ngay</button>
-                    <a href="" style="visibility: hidden;"><button id="them_gio_hang_click" class="btn btn-dark"></button></a> 
-                    <% if (cart) {
-                        cart.forEach((item) => {
-                            if (item.name == data.name) %>
-                        <input type="hidden" id="<%-item.size + item.color%>" value="<%-item.amount%>">
-                        <%})}%>
+                        
                     
                 </form>
             </div>
@@ -370,17 +363,16 @@
     <div class="container clearfix">
       <div class="khoi_chua_sp_lienquan clearfix" style="display: block;">
           <h5 style="margin-left: 10px; margin-bottom: 20px; font-size: 30px;">Sản phẩm liên quan</h5>
-          <% listRelative.forEach((item) => {%>
+         
           <div class="khoi_sp_lienquan" id="effect_1" style="position: relative;">
-              <img style="width: 98%;" src="/uploads/<%-item.images%>"/>
+              <img style="width: 98%;" src="/uploads/"/>
               <div class="khoi_sp_lienquan_info">
-                  <p><%-item.name%></p>
-                  <p><%-item.price%>₫</p>
-                  <a href="/shop/product/<%-item._id%>">Xem chi tiết</a>
+                  <p></p>
+                  <p>₫</p>
+                  <a href="/shop/product/">Xem chi tiết</a>
               </div>
           </div>
-          <%})%>
+        
       </div>
     </div>
-
 <% include ../../partials/footer %>
